--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -13,10 +13,13 @@
 
 .car__container {
   width: 50%;
+  padding-left: 20%;
 }
 
 .checkoutForm__container {
   width: 50%;
+  box-shadow: 0 3px 4px rgb(0 0 0 / 0.2);
+  padding-left: 4rem;
 }
 
 /* Car Container section */
@@ -50,7 +53,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding-bottom: 10%;
+  padding-bottom: 5%;
 }
 
 .car__footer > p {
@@ -67,7 +70,97 @@
 
 .checkoutForm__container {
   padding-top: 10%;
-  padding-right: 10%;
+  padding-bottom: 5%;
+  padding-right: 5%;
+}
+
+.checkout__container form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 70%;
+}
+
+.checkoutForm__container .form__row {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.checkoutForm__container .form__row .form__group {
+  width: 50%;
+}
+
+.checkoutForm__container form .form__group {
+  width: 100%;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.checkoutForm__container form .form__group label {
+  color: #454343;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.checkoutForm__container form .form__group input {
+  padding: 10px;
+  border: 1px solid #a0a0a0;
+  border-radius: 5px;
+  width: 100%;
+  outline: none;
+  color: #333;
+  font-weight: medium;
+}
+
+.cardInput__container {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid #a0a0a0;
+  border-radius: 0px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding: 10px;
+  width: 100%;
+}
+
+.checkoutForm__container .form__row .form__group input {
+  border-radius: 0px;
+  border-top: none;
+}
+
+.checkoutForm__container .form__group .form__group:first-child input {
+  border-bottom-left-radius: 5px;
+}
+
+.checkoutForm__container .form__group .form__group:last-child input {
+  border-bottom-right-radius: 5px;
+  border-left: none;
+}
+
+.cardInput__container input {
+  width: 80%;
+  border: none !important;
+  outline: none;
+  padding: 0 !important;
+}
+
+.cardInput__container img {
+  width: 20%;
+  object-fit: contain;
+}
+
+.checkoutForm__container button {
+  padding: 10px;
+  border: 1px solid #f9d304;
+  border-radius: 5px;
+  width: 100%;
+  background-color: #f9d304;
+  color: #333;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
@@ -78,9 +171,20 @@
 
   .car__container {
     width: 100%;
+    flex-direction: column-reverse;
   }
 
   .checkoutForm__container {
     width: 100%;
+    padding-left: 0;
+  }
+
+  .car__container > img {
+    width: 100%;
+  }
+
+  .checkoutForm__container form {
+    width: 100%;
+    padding: 0 2rem;
   }
 }
