--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -70,9 +70,52 @@
 }
 
 /* Checkout form section */
+.applePay__container {
+  width: 70%;
+}
+
+.or__line__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0;
+}
+
+.or__line__container > div {
+  flex: 1;
+  height: 1px;
+  background-color: #a0a0a0;
+}
+
+.or__line__container > p {
+  color: #a0a0a0;
+  font-weight: bold;
+  margin: 0 10px;
+}
+
+.applePay__btn {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #333;
+  border-radius: 5px;
+  background-color: #333;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.applePay__btn img {
+  height: 15px;
+  width: 15px;
+  object-fit: contain;
+  margin-right: 5px;
+}
 
 .checkoutForm__container {
-  padding-top: 10%;
+  padding-top: 5%;
   padding-bottom: 5%;
   padding-right: 5%;
 }
@@ -155,7 +198,7 @@
   object-fit: contain;
 }
 
-.checkoutForm__container button {
+.checkoutForm__container form button {
   padding: 10px;
   border: 1px solid #f9d304;
   border-radius: 5px;
@@ -187,6 +230,11 @@
   }
 
   .checkoutForm__container form {
+    width: 100%;
+    padding: 0 2rem;
+  }
+
+  .applePay__container {
     width: 100%;
     padding: 0 2rem;
   }
