--- a/styles/header.css
+++ b/styles/header.css
@@ -77,7 +77,7 @@ body {
 }
 
 .hero {
-  background: url('slide03.jpg') no-repeat center center/cover;
+  background: url('../images/slide04.jpg') no-repeat center center/cover;
   height: 650px;
   display: flex;
   align-items: center;
