--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,4 +2,77 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: small;
 }
+.container{
+  display: block;
+  padding: 20px;
+  /*background-color: lightslategray;*/
+}
+.social-icons{
+  display: flex;
+  flex-direction: row;
+  padding-left:70%;
+  border-radius: 20px;
+  }
+.social-icons img{
+  padding: 10px;
+  border-radius: 50%;
+  height: 45px;
+}
+.social-icons button{
+  margin-right: 30px;
+  background-color: red;
+  width: 150px;
+  border: none;
+  color: white;
+  border-radius: 60px;
+  height: 30px;
+}
+/*footer block*/
+.footer{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.footer ul li a {
+  color: inherit;
+  text-decoration: none;
+}
+.footer ul li {
+  padding-top: 10px;
+}
+.footer ul{
+  list-style-type: none;
+  justify-content: space-around;
+  width: 200px;
+}
+.slogan{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+
+}
+.footer-bottom {
+  margin-top: 1rem;
+  border-top: 1px solid #444;
+  padding-top: 1rem;
+  width: 100%;
+}
+.footer-bottom p {
+  margin: 0;
+  font-size: 0.875rem;
+}
+
+/*contacts block*/
+.contacts{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin-left: 5%;
+  padding-top: 20px;
+}
+.contacts ul{
+  list-style-type: none;
+  }
