--- a/styles/success.css
+++ b/styles/success.css
@@ -1,40 +1,42 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+
+.container img {
+
+  width: 100px;
+  margin-bottom: 20px;
 }
-
-.successful-image {
-  margin-left: 535px;
-  margin-top: 100px;
-  width: 180px;
-
-  
+.container h1 {
+  color: #28a745;
+  margin-bottom: 10px;
 }
-
-
-.First-paragraph{
-  color: rgb(47, 227, 47);
-  font-size: 20px;
-  margin-left: 600px;
-  margin-bottom: 50px;
+.container p {
+  color: #666;
+  margin-bottom: 20px;
 }
-
-.Second-paragraph{
-  margin-left: 500px;
-  margin-bottom: 90px;
-
-}
-.Third-paragraph{
-  margin-left: 400px;
-  margin-bottom: 250px;
-}
-.Button-styling{
-  margin-left: 600px;
+.container button {
+  background-color: green;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
   border-radius: 5px;
-  font-size: 15px;
-  
-  
-  
+  cursor: pointer;
 }
+.container button:hover {
+  background-color: green;
+}
+
+.container {
+  min-height: 100vh;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+
+.container button a {
+color: white;
+text-decoration: none;
+}
+  
+
+  
 
