--- a/styles/header.css
+++ b/styles/header.css
@@ -27,6 +27,10 @@ body {
 .top-bar .contact-info {
   float: left;
 }
+.top-bar .contact-info p{
+  margin: 0;
+  font-size: 15px;
+}
 
 .top-bar .auth-links {
   float: right;
@@ -36,6 +40,7 @@ body {
   color: #fff;
   margin-left: 10px;
   text-decoration: none;
+  font-size: 15px;
 }
 
 .navbar {
